[package]
name = "nats"
version = "0.1.6"
description = "A client for the NATS message queue"
authors = ["Frank Denis <j [at] pureftpd.org>"]
keywords = ["nats", "natsd", "queue", "client", "library"]
readme = "README.md"
license = "ISC"
homepage = "https://github.com/jedisct1/rust-nats"
repository = "https://github.com/jedisct1/rust-nats"
categories = ["api-bindings", "caching", "database"]

[badges]
travis-ci = { repository = "jedisct1/rust-nats" }
appveyor = { repository = "jedisct1/rust-nats" }

[dependencies]
rand = "~0.3"
serde = "~0.8"
serde_json = "~0.8"
url = "~1.3"
openssl = "0.9.16"

clippy = {version = ">=0", optional = true}
