[package]
name = "nats"
version = "0.3.1"
description = "A client for the NATS message queue"
authors = ["Frank Denis <j [at] pureftpd.org>"]
keywords = ["nats", "natsd", "queue", "client", "library"]
readme = "README.md"
license = "ISC"
homepage = "https://github.com/jedisct1/rust-nats"
repository = "https://github.com/jedisct1/rust-nats"
categories = ["api-bindings", "caching", "database"]
edition = "2018"

[badges]
travis-ci = { repository = "jedisct1/rust-nats" }
appveyor = { repository = "jedisct1/rust-nats" }

[dependencies]
rand = "0.6"
serde = "1.0"
serde_json = "1.0"
url = "1.7"
openssl = "0.10"
